inheritance and title improvements